Improve UX with filter desktop scroll

--- a/src/app/modules/deck-builder/crypt-section/crypt-section.component.scss
+++ b/src/app/modules/deck-builder/crypt-section/crypt-section.component.scss
@@ -4,15 +4,27 @@ header {
   z-index: 100;
 }
 
-.more-filters {
-  --bs-btn-padding-y: 0.25rem;
-  --bs-btn-padding-x: 0.5rem;
-  --bs-btn-font-size: 0.75rem;
-}
-
 .back-to-top {
   position: fixed;
   bottom: 25px;
   right: 25px;
   z-index: 1001;
+}
+
+.filters-desktop {
+  overflow-y: auto;
+  max-height: calc(100dvh - 65px);
+  max-height: calc(100vh - 65px);
+  position: sticky;
+  top: 65px;
+  direction: rtl;
+}
+
+.filters-desktop-container {
+  direction: ltr;
+  margin-bottom: 75px;
+}
+
+.scroll-container {
+  scroll-margin-top: 65px;
 }
