--- a/src/app/modules/decks/decks.component.scss
+++ b/src/app/modules/decks/decks.component.scss
@@ -22,6 +22,20 @@ header {
   transform: rotate(90deg);
 }
 
-.decks-container {
-  min-height: 100vh;
+.filters-desktop {
+  overflow-y: auto;
+  max-height: calc(100dvh - 65px);
+  max-height: calc(100vh - 65px);
+  position: sticky;
+  top: 65px;
+  direction: rtl;
+}
+
+.filters-desktop-container {
+  direction: ltr;
+  margin-bottom: 75px;
+}
+
+.scroll-container {
+  scroll-margin-top: 65px;
 }
