--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -115,7 +115,11 @@
       </p>
     </div>
   </section>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7379021241824282"
+    crossorigin="anonymous"></script>
+  <!-- VtesDecks Home Hero Responsive -->
 
+  <app-ad-sense adClient="ca-pub-7379021241824282" adSlot="6580167823" adFormat="auto" fullWidthResponsive="true" />
 
   <!-- Popular and Newest Decks -->
   <div class="row mt-3">
@@ -137,8 +141,7 @@
     </app-home-section>
   </div>
 
-  <app-ad-sense adClient="ca-pub-7379021241824282" adSlot="7683446640" adFormat="auto"
-    fullWidthResponsive="true" />
+  <app-ad-sense adClient="ca-pub-7379021241824282" adSlot="7683446640" adFormat="auto" fullWidthResponsive="true" />
 
   <!-- Contribution Section -->
   <section class="contribution-section py-4">
