Add patreon link

--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -194,3 +194,12 @@
     }
   }
 }
+
+.btn-patreon {
+  background-color: #c14d3b;
+  color: white;
+}
+.btn-patreon:hover {
+  background-color: #f96854;
+  color: white;
+}
