--- a/src/app/modules/deck-builder/library-section/library-section.component.html
+++ b/src/app/modules/deck-builder/library-section/library-section.component.html
@@ -112,6 +112,7 @@
       (typesChange)="onChangeTypesFilter($event)" [(bloodCostSlider)]="bloodCostSlider"
       (bloodCostSliderChange)="onChangeBloodCostSliderFilter($event)" [(poolCostSlider)]="poolCostSlider"
       (poolCostSliderChange)="onChangePoolCostSliderFilter($event)" [(title)]="title"
-      (titleChange)="onChangeTitleFilter($event)" />
+      (titleChange)="onChangeTitleFilter($event)" [(cardText)]="cardText"
+      (cardTextChange)="onChangeCardTextFilter($event)" />
   </ng-template>
 </ng-container>
