--- a/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
+++ b/src/app/modules/deck-builder/crypt-section/crypt-section.component.html
@@ -120,6 +120,7 @@
       (groupSliderChange)="onChangeGroupSliderFilter($event)" [(capacitySlider)]="capacitySlider"
       (capacitySliderChange)="onChangeCapacitySliderFilter($event)" [(title)]="title"
       (titleChange)="onChangeTitleFilter($event)" [(sect)]="sect" (sectChange)="onChangeSectFilter($event)"
-      [(taints)]="taints" (taintsChange)="onChangeTaintsFilter($event)" />
+      [(taints)]="taints" (taintsChange)="onChangeTaintsFilter($event)" [(cardText)]="cardText"
+      (cardTextChange)="onChangeCardTextFilter($event)" />
   </ng-template>
 </ng-container>
